# tensegrity

./: demo.ipynb  flake.nix  pyproject.toml  taichi_demo.ipynb  tnsgrt.ipynb
