[tool.poetry]
name = "tensegrity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
toolkits = "^0.2.2"
matplotlib = "^3.7.2"
tnsgrt = "^0.6"
taichi = "^1.7.3"
taichi-elements = "^0.0.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
